# advect-daq

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
advect_daq/core/: base.py  config.py  engine.py  logging.py  status_server.py  writer.py
advect_daq/plugins/: ina228.py  mcc134.py  random_walk.py
advect_daq/utils/: discovery.py
config/: default_data_config.toml  default_sensors.toml
deploy/: advect-daq.service  setup-service.sh
doc/: plugins.md
